Fixed dimensions on mobile devices

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,13 +16,6 @@ body {
   font-size: 1.5em;
 }
 
-.description{
-  min-height: 300px;
-  min-width: 300px;
-  margin: 0%;
-  padding: 0%;
-}
-
 .description:hover {
   cursor: pointer; 
 }
@@ -43,17 +36,24 @@ body {
 .gallery {
   max-width: 100%;
   margin: auto;
-  text-align: left;
-  padding-left: 30px;
+  text-align: center;
+  margin-left: -15px;
   padding-bottom: 170px;
 }
 
 .galleryItem {
   display: inline-block;
   text-align: center;
-  margin: 50px;
-  width: 300px;
-  height: 300px;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-left: 3%;
+  margin-right: 3%;
+  max-width: 300px;
+  max-height: 300px;
+  width: 93.75%;
+  height: 93.75%;
+  min-height: 300px;
+  min-width: 253px;
 
 }
 
@@ -62,21 +62,18 @@ body {
   padding-bottom: 0px;
 }
 
-img {
-  /* Make this 300 later (300X300 photos) */
-  max-width: 300px;
-  max-height: 300px;
-}
-
 img:hover {
   cursor: pointer;
 }
 
 /* Polaroid styling below */
 .polaroid {
-  width: 320px;
+  /* max-width: 320px; */
+  width:  100%;
+  height: 100%;
+  min-height: 100%;
+  min-width: 220px;
   background: #ffffff;
-  margin: 10px;
   padding: 15px 15px 10px;
   -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
   -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
@@ -94,4 +91,21 @@ img:hover {
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
   box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+}
+
+.description{
+  /* max-height: 300px; */
+  width: 93.75%;
+  height: 93.75%;
+  min-height: 300px;
+  min-width: 253px;
+  /* min-width: 200px; */
+  margin: 0%;
+  padding: 0%;
+}
+
+img {
+  /* image always takes up full space of card */
+  width: 93.75%;
+  height: 93.75;
 }
